# Curriculummind

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/agents/: base.py  content_curator.py  diagnostic_analyzer.py  goal_planner.py  pace_reasoner.py  verifier.py
backend/api/: app.py
backend/api/middleware/: logging.py
backend/api/routers/: health.py  plans.py
backend/api/schemas/: plans.py
backend/core/: config.py  exceptions.py  logging.py  models.py
backend/data/sample_profiles/: az900_student.json
backend/infrastructure/docker/: Dockerfile  docker-compose.yml
backend/orchestrator/: pipeline.py
backend/scripts/: create_inits.sh  seed_search_index.py
backend/services/: foundry_client.py
backend/services/search/: azure_search.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_diagnostic_analyzer.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  opengraph-image.jsx  page.jsx
frontend/components/: Badge.jsx  CopyPlanButton.jsx  GapCard.jsx  LoadingOverlay.jsx  Logo.jsx  MilestoneCard.jsx  ReasoningTrace.jsx  ResourceCard.jsx  Results.jsx  Reveal.jsx  SectionHeading.jsx  SetupForm.jsx
frontend/lib/: api.js  exportPlan.js  progress.js
