[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curriculummind"
version = "0.1.0"
description = "AI-powered adaptive learning path agent system built on Microsoft Foundry"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.0.0",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.17.0",
    "azure-search-documents>=11.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "azure-monitor-opentelemetry>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "orchestrator", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
